<resources>
    <string name="app_name">Revolut Pay Demo</string>
    <string name="main_fragment">Main Fragment</string>
    <string name="revolut_pay_button">Revolut Pay Button Demo</string>
    <string name="revolut_pay_flow">Revolut Pay Flow Demo</string>
    <string name="revolut_pay_promo_banner_demo">Promo Banner Demo</string>
    <string name="revolut_pay_flow_confirm_button">Revolut Pay Flow Custom Button Demo</string>
    <string name="revolut_pay_revolut_app_installation_check">Revolut Application Installation Check</string>
    <string name="revolut_pay_uikit_showcase">UiKit Showcase</string>
    <string name="revolut_pay_save_payment_method_for_merchant">Save Payment Method for Merchant</string>
    <string name="revolut_pay_request_shipping">Request shipping</string>
    <string name="revolut_pay_preferred_mode">Preferred mode:</string>
    <string name="order_token_clear">Clear order token</string>
    <string name="order_token_title">Order token</string>
    <string name="order_completed">Order completed</string>
    <string name="order_failed">Order failed</string>
    <string name="order_abandoned">Order abandoned</string>
    <string name="revolut_application_installed">Revolut application is installed</string>
    <string name="revolut_application_not_installed">Revolut application is not installed</string>
    <string name="promo_banner_demo_customer_phone">Set Customer Phone</string>
    <string name="promo_banner_demo_customer_email">Set Customer Email</string>
</resources>
